--- a/src/environment.yml
+++ b/src/environment.yml
@@ -1,7 +1,13 @@
-name: XCS221
+name: XCS224N
 channels:
   - defaults
+  - conda-forge
 dependencies:
-  - python=3.6.9
-  - notebook
-  - tk>=8.6.8
+  - python=3.6
+  - numpy=1.15.4
+  - scipy=1.1.0
+  - scikit-learn=0.21.2
+  - matplotlib=3.0.3
+  - nltk=3.4.1
+  - tqdm=4.19.9
+  - pytorch
