--- a/src-quiz/environment.yml
+++ b/src-quiz/environment.yml
@@ -2,13 +2,20 @@ name: XCS224N
 channels:
   - defaults
   - conda-forge
+  - pytorch
 dependencies:
-  - python=3.6
-  - numpy=1.15.4
-  - scipy=1.1.0
+  - python=3.7.10
+  - numpy=1.19.0
+  - scipy=1.6.2
   - scikit-learn=0.21.2
   - matplotlib=3.0.3
-  - nltk=3.4.1
-  - tqdm=4.19.9
-  - pytorch
+  - nltk=3.6.2
+  - tqdm=4.59.0
+  - pytorch=1.8.1
   - docopt=0.6.2
+  - torchvision=0.9.1
+  - pip=21.1.2
+  - pip:
+    - sentencepiece
+    - sacrebleu
+    - nltk
