--- a/src/environment.yml
+++ b/src/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - pytorch=1.8.1
   - docopt=0.6.2
   - torchvision=0.9.1
+  - notebook
   - pip=21.1.2
   - pip:
     - sentencepiece
