--- a/src/environment.yml
+++ b/src/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - matplotlib=3.0.3
   - nltk=3.6.2
   - tqdm=4.59.0
-  - pytorch=1.8.1
+  - pytorch=1.10.0
   - docopt=0.6.2
   - torchvision=0.9.1
   - notebook
@@ -20,3 +20,4 @@ dependencies:
     - sentencepiece
     - sacrebleu
     - nltk
+    - timeout_decorator
