--- a/src/environment.yml
+++ b/src/environment.yml
@@ -4,16 +4,14 @@ channels:
   - conda-forge
   - pytorch
 dependencies:
-  - python=3.7.10
+  - python=3.8.10
   - numpy=1.19.0
   - scipy=1.6.2
-  - scikit-learn=0.21.2
-  - matplotlib=3.0.3
-  - nltk=3.6.2
+  - scikit-learn=0.24.2
+  - matplotlib=3.3.4
+  - nltk=3.4.5
   - tqdm=4.59.0
-  - pytorch=1.10.0
   - docopt=0.6.2
-  - torchvision=0.9.1
   - notebook
   - pip=21.1.2
   - pip:
@@ -21,3 +19,6 @@ dependencies:
     - sacrebleu
     - nltk
     - timeout_decorator
+    - "--find-links https://download.pytorch.org/whl/torch_stable.html"
+    - torch==1.10.0+cpu
+    - torchvision==0.11.1
