--- a/src/environment.yml
+++ b/src/environment.yml
@@ -18,8 +18,8 @@ dependencies:
     - sacrebleu
     - nltk
     - timeout_decorator
+    - "--find-links https://download.pytorch.org/whl/torch_stable.html"
     - torch==1.10.0; sys_platform != "linux" and sys_platform != "win32"
     - torchvision==0.11.1; sys_platform != "linux" and sys_platform != "win32"
-    - "--find-links https://download.pytorch.org/whl/torch_stable.html"; sys_platform == "linux" or sys_platform == "win32"
     - torch==1.10.0+cpu; sys_platform == "linux" or sys_platform == "win32"
     - torchvision==0.11.1+cpu; sys_platform == "linux" or sys_platform == "win32"
